--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+14.feb (la)
+      -  fix #14648: Disallow copy of part of tuplets (patch by Jorgk)
 13.feb (la)
       - Add Frame Text to Vertical Frame
       - MusicXML: minimal support of page relative text on first page in import and export
