--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,7 @@
+14.2 (ws)
+      - allow ties without second note
 13.2 (ws)
+      - fix clef drop target color
       - patch #14940: SVG images printed twice on PDF 1st page and never on
         following pages (patch from Miwarre)
       - class ImagePath() replaced by ImageStore()
