--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,6 @@
+17.2 (mw)
+      - instruments.xml: restored lost data, completed TAB data, fixed viols
+      - Staff::init(): fixed init. from templates using tablatures
 15.2 (ws)
       - new image property to give size in spatium units (vs. metric mm)
       - implement inspector panel for images
