--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,7 +1,8 @@
 19.feb (lv)
+      - fix #15002: [MusicXML] [1.2] Export/import of uneven tuplets (16th, eighth, eighth, 16th)
       - fix #15033: [MusicXML] [1.2] Handle tuplet property "number"
 18.feb (lv)
-      - partial fix #15002: [MusicXML] [1.2] [Trunk] Export/import of uneven tuplets (16th, eighth, eighth, 16th)
+      - partial fix #15002: [MusicXML] [1.2] Export/import of uneven tuplets (16th, eighth, eighth, 16th)
         (export only)
       - support parentheses attribute for accidentals (prefered as of MusicXML 1.1)
       - fix MusicXML regression test
