--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,5 @@
+24.2 (ws)
+      - add framework for "continuous view" (scrollview)
 23.2 (ws)
       - fix #12871: Undo doesn't undo "Make barlines invisible"
       - fix #13767: Problem of refresh in the display menu
