fix #15147: Style Page Nums "show first" not checked, 1st page > 1: 1st page number still shown (mi)

--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+25.feb (la)
+      - fix #15147: Style Page Nums "show first" not checked, 1st page > 1: 1st page number still shown (mi)
 24. feb (la)
       - Change Moussorgski's Promenade by Marc Sabatella's Reunion !
       - use english note name in Edit Drumset dialog
