Work In Progress for figured bass

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+27.2 (mw)
+      - Work In Progress for figured bass
 27.2 (ws)
       - fix layout of bend symbol
       - center string names in tablature staff
