--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,5 +1,6 @@
 27.2 (mw)
       - Work In Progress for figured bass
+      - Staff Type Editor - Tabulature: uncluttered layout, added tabulature preview (WIP)
 27.2 (ws)
       - fix layout of bend symbol
       - center string names in tablature staff
