--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+03.mar (lv)
+      - update MusicXML regression test
 01.mar (la)
       - #15228 change behavior of add octave up/down to perfect octave
 26.feb (la)
