--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,6 @@
-03.3 (mw)
+03.3 (lv)
+      - update MusicXML regression test
+     (mw)
       - Figured Bass: added style param. to "Style | General" dlg box
       - Figured Bass: added font config. file
 29.2 (ws)
@@ -23,9 +25,9 @@
       - fix creation of linked part in "new wizard"
       - fix bar line creation of additional staff for part created in "new wizard"
       - fix keysig palette offset in "new wizard"
-	 (db)
-	  - add alt keys for menu items
-	  - improve dialog text for incompatible files
+     (db)
+      - add alt keys for menu items
+      - improve dialog text for incompatible files
 24.2 (ws)
       - add framework for "continuous view" (scrollview)
 23.2 (ws)
