--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,6 +1,8 @@
 04.3 (lv)
       - fix #14811: [MusicXML import] [trunk] import error: 41h-TooManyParts.xml causes crash
       - fix #14812: [MusicXML import] [trunk] import error: 41g-PartNoId.xml causes crash
+      - partial fix #15042: [MusicXML] [trunk] Export/import of uneven tuplets (16th, eighth, eighth, 16th)
+        -> all code synced from branch, but does not work correctly yet, due to tuplet baselen issue
       - fix #15066: [MusicXML import] [trunk] import error: 31a-Directions.xml missing dashes and bracket
       - fix #15156: [MusicXML] [trunk] empty measures are not imported
       - support parentheses attribute for accidentals (prefered as of MusicXML 1.1)
