--- a/trunk/mscore/share/locale/languages.xml
+++ b/trunk/mscore/share/locale/languages.xml
@@ -3,6 +3,7 @@
   <language code="af" name="Afrikaans" />
   <language code="ar" name="العربية" handbook="http://musescore.org/ar/الكتيّب"/>
   <language code="ast" name="Asturianu" />
+  <language code="be" name="Беларуская мова" />  
   <language code="bg" name="български" />
   <language code="ca" name="Català" handbook="http://musescore.org/ca/manual" />
   <language code="cs" name="Czech" />
