add add Belarusian translation update MuseScore Connect

--- a/mscore/share/locale/CMakeLists.txt
+++ b/mscore/share/locale/CMakeLists.txt
@@ -22,6 +22,7 @@ install(FILES
       mscore_af.qm
       mscore_ar.qm
       mscore_ast.qm
+      mscore_be.qm      
       mscore_bg.qm
       mscore_ca.qm
       mscore_cs.qm
