--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,7 +1,8 @@
-05.mar (la)
-      - add Belarusian translation
 06.mar (la)
       - fix #4893: Non-removable courtesy clef appears after insert measure before first one
+      - fix #15347: Dragging slur from Lines palette causes crash
+05.mar (la)
+      - add Belarusian translation
 03.mar (lv)
       - update MusicXML regression test
 01.mar (la)
