--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,6 @@
-07.3 (mw)
+07.3  (ws)
+      - updated text style implementation for styled/unstyled text
+      (mw)
       - Changed FiguredBass to displays text which cannot be parsed
 05.3 (db)
       - Minor spelling and javascript corrections for test plugin
