--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+07.mar (la)
+      - fix #15283: Paste and undo causes crash
 06.mar (la)
       - fix #4893: Non-removable courtesy clef appears after insert measure before first one
       - fix #15347: Dragging slur from Lines palette causes crash
