--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,5 @@
+10.3  (la)
+      - fix DMG icon layout on Mac OSX 10.6 see http://openradar.appspot.com/7186342
 09.3  (mw)
       - fix #15191: Tablature doesn't like unisons
       - added undoChangeFret() to undo
