--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,6 @@
+10.mar (la)
+      - fix DMG icon layout on Mac OSX 10.6 see http://openradar.appspot.com/7186342
+      - Ability to nudge lyrics with left and right arrows
 09.mar (la)
       - fix #15353: 'start with score' box too narrow on Mac OSX
 08.mar (la)
