--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,5 @@
+12.3 (mw)
+      - Copying FiguredBass from a note/chord to another
 11.3 (lv)
       - fix #15452: [MusicXML import] [trunk] Notes are interpreted as rests, wrong lengths, strange results
      (ws)
