--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -2,6 +2,7 @@
       - added player app for meego (tested on nokia N9)
       (mw)
       - Copying FiguredBass from a note/chord to another
+      - Tab/ShiftTab in FiguredBass editing
 11.3 (lv)
       - fix #15452: [MusicXML import] [trunk] Notes are interpreted as rests, wrong lengths, strange results
      (ws)
