--- a/mscore/NEWS
+++ b/mscore/NEWS
@@ -1,3 +1,7 @@
+Realease 1.2
+-----------------------------------
+http://musescore.org/en/node/15186
+
 Realease 1.1
 -----------------------------------
 http://musescore.org/en/node/11412
