--- a/mscore/README
+++ b/mscore/README
@@ -75,7 +75,7 @@ Test:
             mscore
 
       to start mscore. On first invocation a demofile
-      (Modeste Moussorgsky: Pictures of an exhibition: Promenade)
+      (Marc Sabatella: Reunion)
       is shown. You probably want to change that in the
       "preferences" dialog.
 
@@ -89,6 +89,6 @@ Test:
       Contact
 =================================================================
 
-      Werner Schweer; ws@seh.de
+      Werner Schweer; info@musescore.org
       http://www.musescore.org/
 
