--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,5 @@
+16.3 (mw)
+      - FiguredBass: accepted contin.line alone
 12.3 (ws)
       - added player app for meego (tested on nokia N9)
       (mw)
