fix #15168: Meta data for SVG export : title and description fix #15181: Move "Meta Data" to File menu, rename to file > info... fix #15567: Check for plugin minor version gives wrong output in case it is greater than SCRIPT_MINOR_VERSION fix various issue detected by CppCheck generate test report in build directory

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,9 @@
+17.3 (la)
+      - fix #15168: Meta data for SVG export : title and description
+      - fix #15181: Move "Meta Data" to File menu, rename to file > info...
+      - fix #15567: Check for plugin minor version gives wrong output in case it is greater than SCRIPT_MINOR_VERSION
+      - fix various issue detected by CppCheck
+      - generate test report in build directory
 16.3 (mw)
       - FiguredBass: accepted contin.line alone
 12.3 (ws)
