more work on #15899: MusicXML: support figured bass

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+6.4 (lv)
+      - more work on #15899: MusicXML: support figured bass
 5.4 (lv)
       - partial and very preliminary fix for #15899: MusicXML: support figured bass
 2.4. (ws)
