more work on #15899: MusicXML: support figured bass

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+8.4 (lv)
+      - more work on #15899: MusicXML: support figured bass
 7.4 (lv)
       - more work on #15899: MusicXML: support figured bass
 6.4 (lv)
